force-app/main/default/objects/breg_Transaction__c/breg_Transaction__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-62</description>
    <label>BREG Transaction</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Transaction Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BREG Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>