force-app/main/default/objects/breg_Transaction__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-62</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>breg_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>