force-app/main/default/objects/breg_Transaction__c/fields/breg_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Address__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>