force-app/main/default/objects/breg_Transaction__c/fields/breg_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Address_Type__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRAA</fullName>
                <label>CRA Address</label>
            </value>
            <value>
                <fullName>AGMA</fullName>
                <label>Agent Mailing Address</label>
            </value>
            <value>
                <fullName>PRBA</fullName>
                <label>Personal Business Address</label>
            </value>
            <value>
                <fullName>PRIN</fullName>
                <label>Principal Address</label>
            </value>
            <value>
                <fullName>MAIL</fullName>
                <label>Mailing Address</label>
            </value>
            <value>
                <fullName>TNMA</fullName>
                <label>TN/TM/SM Mailing Address</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>