force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_ADDRESS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_ADDRESS_ID__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>BRIM ADDRESS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>