force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_BRA_NOTES__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BRA_NOTES__c</fullName>
    <description>Aalta BREG-2681</description>
    <label>BRIM BRA NOTES</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>