force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_IMAGE_AAILABLE_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_IMAGE_AAILABLE_DT__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>BRIM IMAGE AVAILABLE DT</label>
    <type>Date</type>
</CustomField>