force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_New_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_New_Name__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>BRIM New Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>