force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_TRANS_EVENTS_DATA__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_TRANS_EVENTS_DATA__c</fullName>
    <label>breg_BRIM_TRANS_EVENTS_DATA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>