force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_TRANS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_TRANS_ID__c</fullName>
    <description>Aalta BREG-1355</description>
    <externalId>true</externalId>
    <label>BRIM TRANS ID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>