force-app/main/default/objects/breg_Transaction__c/fields/breg_BRIM_TRANS_SEQ__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_TRANS_SEQ__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>BRIM TRANS SEQ</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>