force-app/main/default/objects/breg_Transaction__c/fields/breg_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Business_Name__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Business Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>