force-app/main/default/objects/breg_Transaction__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transactions (Case)</relationshipLabel>
    <relationshipName>breg_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>