force-app/main/default/objects/breg_Transaction__c/fields/breg_Case_File_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_Case_File_Number__c</fullName>
    <description>Aalta BREG-3652</description>
    <formula>breg_Case__r.breg_File__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case File Number</label>
    <type>Text</type>
</CustomField>