force-app/main/default/objects/breg_Transaction__c/fields/breg_Category__c.field-meta.xml
<CustomField>
    <fullName>breg_Category__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHEMICALS</fullName>
            </value>
            <value>
                <fullName>PAINTS</fullName>
            </value>
            <value>
                <fullName>COSMETICS AND CLEANING PREPARATIONS</fullName>
            </value>
            <value>
                <fullName>LUBRICANTS AND FUELS</fullName>
            </value>
            <value>
                <fullName>PHARMACEUTICALS</fullName>
            </value>
            <value>
                <fullName>METAL GOODS</fullName>
            </value>
            <value>
                <fullName>MACHINERY</fullName>
            </value>
            <value>
                <fullName>HAND TOOLS</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL AND SCIENTIFIC APPARATUS</fullName>
            </value>
            <value>
                <fullName>MEDICAL APPARATUS</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENTAL CONTROL APPARATUS</fullName>
            </value>
            <value>
                <fullName>VEHICLES</fullName>
            </value>
            <value>
                <fullName>FIREARMS</fullName>
            </value>
            <value>
                <fullName>JEWELRY</fullName>
            </value>
            <value>
                <fullName>MUSICAL INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>PAPER GOODS AND PRINTED MATTER</fullName>
            </value>
            <value>
                <fullName>RUBBER GOODS</fullName>
            </value>
            <value>
                <fullName>LEATHER GOODS</fullName>
            </value>
            <value>
                <fullName>NONMETTALIC BUILDING MATERIALS</fullName>
            </value>
            <value>
                <fullName>FURNITURE AND ARTICLES NOT OTHERWISE CLASSIFIED</fullName>
            </value>
            <value>
                <fullName>HOUSEWARES AND GLASS</fullName>
            </value>
            <value>
                <fullName>CORDAGE AND FIBERS</fullName>
            </value>
            <value>
                <fullName>YARNS AND THREADS</fullName>
            </value>
            <value>
                <fullName>FABRICS</fullName>
            </value>
            <value>
                <fullName>CLOTHING</fullName>
            </value>
            <value>
                <fullName>FANCY GOODS</fullName>
            </value>
            <value>
                <fullName>FLOOR COVERINGS</fullName>
            </value>
            <value>
                <fullName>TOYS AND SPORTING GOODS</fullName>
            </value>
            <value>
                <fullName>MEATS AND PROCESSED FOODS</fullName>
            </value>
            <value>
                <fullName>STAPLE FOODS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>