force-app/main/default/objects/breg_Transaction__c/fields/breg_Description__c.field-meta.xml
<CustomField>
    <fullName>breg_Description__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>