force-app/main/default/objects/breg_Transaction__c/fields/breg_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Effective_Date__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>