force-app/main/default/objects/breg_Transaction__c/fields/breg_Facsimile__c.field-meta.xml
<CustomField>
    <fullName>breg_Facsimile__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Facsimile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>