force-app/main/default/objects/breg_Transaction__c/fields/breg_File_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Number (Deprecated)</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>breg_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>