force-app/main/default/objects/breg_Transaction__c/fields/breg_File_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Number_Formula__c</fullName>
    <description>Aalta BREG-2644</description>
    <formula>IF(ISBLANK(breg_Case__c), breg_Account__r.breg_File__c, breg_Case__r.breg_File__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Number</label>
    <type>Text</type>
</CustomField>