force-app/main/default/objects/breg_Transaction__c/fields/breg_File_Suffix__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Suffix__c</fullName>
    <description>Aalta BREG-62</description>
    <label>File Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>