force-app/main/default/objects/breg_Transaction__c/fields/breg_Filing_Year__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Year__c</fullName>
    <label>Filing Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>