force-app/main/default/objects/breg_Transaction__c/fields/breg_Filing_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Year_Text__c</fullName>
    <description>Aalta BREG-2645</description>
    <formula>TEXT( breg_Filing_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filing Year</label>
    <type>Text</type>
</CustomField>