force-app/main/default/objects/breg_Transaction__c/fields/breg_Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Configuration</label>
    <referenceTo>breg_Form_Configuration__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>breg_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>