force-app/main/default/objects/breg_Transaction__c/fields/breg_Is_Robot_Process__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Robot_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Robot Process</label>
    <type>Checkbox</type>
</CustomField>