force-app/main/default/objects/breg_Transaction__c/fields/breg_Is_Transaction_Protected__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Transaction_Protected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Transaction Protected</label>
    <type>Checkbox</type>
</CustomField>