force-app/main/default/objects/breg_Transaction__c/fields/breg_License_Year__c.field-meta.xml
<CustomField>
    <fullName>breg_License_Year__c</fullName>
    <description>Aalta BREG-62</description>
    <label>License Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>