force-app/main/default/objects/breg_Transaction__c/fields/breg_License_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>breg_License_Year_Text__c</fullName>
    <description>Aalta BREG-2645</description>
    <formula>TEXT(breg_License_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Year</label>
    <type>Text</type>
</CustomField>