force-app/main/default/objects/breg_Transaction__c/fields/breg_Marked_For_Deletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>breg_Marked_For_Deletion_Reason__c</fullName>
    <label>Marked For Deletion Reason</label>
    <type>TextArea</type>
</CustomField>