force-app/main/default/objects/breg_Transaction__c/fields/breg_Notes__c.field-meta.xml
<CustomField>
    <fullName>breg_Notes__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>