force-app/main/default/objects/breg_Transaction__c/fields/breg_Phone__c.field-meta.xml
<CustomField>
    <fullName>breg_Phone__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>