force-app/main/default/objects/breg_Transaction__c/fields/breg_Remarks__c.field-meta.xml
<CustomField>
    <fullName>breg_Remarks__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>