force-app/main/default/objects/breg_Transaction__c/fields/breg_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Status__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Entered</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Received</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Held</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Purged</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Delinquent</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>??? (I)</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Suspended</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Test</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>aMended</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Bounced Chk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>