force-app/main/default/objects/breg_Transaction__c/fields/breg_TN_TM_SM__c.field-meta.xml
<CustomField>
    <fullName>breg_TN_TM_SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN/TM/SM</label>
    <referenceTo>breg_TN_TM_SM__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>