force-app/main/default/objects/breg_Transaction__c/fields/breg_Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Trade_Type__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Trade Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TN</fullName>
                <label>Trade Name</label>
            </value>
            <value>
                <fullName>TM</fullName>
                <label>Trade Mark</label>
            </value>
            <value>
                <fullName>SM</fullName>
                <label>Service Mark</label>
            </value>
            <value>
                <fullName>NS</fullName>
                <label>Publicity Rights Name</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>