force-app/main/default/objects/breg_Transaction__c/fields/breg_Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Transaction_Codes</valueSetName>
    </valueSet>
</CustomField>