force-app/main/default/objects/breg_Transaction__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>AC - Articles of Correction</label>
            </value>
            <value>
                <fullName>ADD</fullName>
                <label>ADD - Address Change</label>
            </value>
            <value>
                <fullName>ADMBX</fullName>
                <label>ADMBX - Certificate of Administrative Termination</label>
            </value>
            <value>
                <fullName>ADMT</fullName>
                <label>ADMT - Administrative Termination</label>
            </value>
            <value>
                <fullName>AFF</fullName>
                <label>AFF - Affadavit</label>
            </value>
            <value>
                <fullName>AGAD</fullName>
                <label>AGAD - Agent Address Change</label>
            </value>
            <value>
                <fullName>AGC</fullName>
                <label>AGC - Change of Registered Agent</label>
            </value>
            <value>
                <fullName>AGD</fullName>
                <label>AGD - Designation of Agent</label>
            </value>
            <value>
                <fullName>AGR</fullName>
                <label>AGR - Resignation of Agent</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>AM - Amendment</label>
            </value>
            <value>
                <fullName>AMBX</fullName>
                <label>AMBX - Amendment</label>
            </value>
            <value>
                <fullName>AMCN</fullName>
                <label>AMCN - Amendment / Cancellation LLP</label>
            </value>
            <value>
                <fullName>AMIN</fullName>
                <label>AMIN - Articles of Amendment / Increase</label>
            </value>
            <value>
                <fullName>AMNC</fullName>
                <label>AMNC - Articles of Amendment / Name Change</label>
            </value>
            <value>
                <fullName>AMRD</fullName>
                <label>AMRD - Articles of Amendment / Reduction</label>
            </value>
            <value>
                <fullName>AMRS</fullName>
                <label>AMRS - Amended / Restated</label>
            </value>
            <value>
                <fullName>AMRSX</fullName>
                <label>AMRSX - Amended / Restated</label>
            </value>
            <value>
                <fullName>ANN</fullName>
                <label>ANN - Annual Filing</label>
            </value>
            <value>
                <fullName>ANNBX</fullName>
                <label>ANNBX - Annual report/statement</label>
            </value>
            <value>
                <fullName>ART</fullName>
                <label>ART - Articles of Incorporation</label>
            </value>
            <value>
                <fullName>ARTBX</fullName>
                <label>ARTBX - Articles of Incorporation</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>AT - Articles of Termination</label>
            </value>
            <value>
                <fullName>ATBX</fullName>
                <label>ATBX - Articles of Termination</label>
            </value>
            <value>
                <fullName>BSX</fullName>
                <label>BSX - Back Scanned Document</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>CC - Certificate of Correction</label>
            </value>
            <value>
                <fullName>CCLP</fullName>
                <label>CCLP - Certificate of Correction</label>
            </value>
            <value>
                <fullName>CERBX</fullName>
                <label>CERBX - Certificate</label>
            </value>
            <value>
                <fullName>CLSF</fullName>
                <label>CLSF - TM/SM Classification</label>
            </value>
            <value>
                <fullName>CMGBX</fullName>
                <label>CMGBX - LLC Merger/Consolidation/Name Change</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>CN - Application For Certificate of Cancellation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>