force-app/main/default/objects/breg_Transaction__c/validationRules/BREG_Restrict_Robot_Process_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>BREG_Restrict_Robot_Process_Flag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(breg_Is_Robot_Process__c),
    $Profile.Name &lt;&gt; &quot;Integration&quot;,
    ISNULL( breg_BRIM_TRANS_ID__c)
)</errorConditionFormula>
    <errorDisplayField>breg_Is_Robot_Process__c</errorDisplayField>
    <errorMessage>Only the Integration User can set Robot Process flag on a Transaction.</errorMessage>
</ValidationRule>