force-app/main/default/objects/breg_Transaction__c/listViews/All_Legacy_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Legacy_Transactions</fullName>
    <columns>NAME</columns>
    <columns>breg_Account__c</columns>
    <columns>breg_Business_Name__c</columns>
    <columns>breg_Case__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>breg_Effective_Date__c</columns>
    <columns>breg_File_Number__c</columns>
    <columns>breg_File_Suffix__c</columns>
    <columns>breg_Form_Configuration__c</columns>
    <columns>breg_Received_Date__c</columns>
    <columns>breg_Status__c</columns>
    <columns>breg_Transaction_Code__c</columns>
    <columns>breg_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breg_BRIM_TRANS_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Legacy Transactions</label>
</ListView>